--- a/src/main/resources/templates/testhtml.html
+++ b/src/main/resources/templates/testhtml.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>서비스 점검 안내</title>
+    <title>테스트: 새로운 기능 소개</title>
 </head>
 <body>
-<h1>서비스 점검 안내</h1>
-<p>서비스 점검으로 인해 일시적으로 이용이 제한됩니다. 아래 내용을 확인하세요:</p>
-<img src="images/notices/test1.png" alt="Maintenance Notice Image 1"/>
+<h1>테스트: 새로운 기능 소개</h1>
+<p>이번 업데이트에서 추가된 새로운 기능들을 테스트해보세요. 아래 이미지를 확인하세요:</p>
+<img src="http://3.34.105.70:8080/images/notices/test1.png" alt="Test Feature Image 1"/>
 
-<p>점검 시간 동안 서비스 이용이 불가능합니다. 불편을 끼쳐드려 죄송합니다.</p>
-<img src="images/notices/test2.png" alt="Maintenance Notice Image 2"/>
+<p>계속해서 테스트된 기능들을 확인해보세요:</p>
+<img src="http://3.34.105.70:8080/images/notices/test1.png" alt="Test Feature Image 2"/>
 
-<p>빠른 시간 내에 점검을 완료하겠습니다. 감사합니다.</p>
+<p>이번 업데이트로 사용자 경험이 더욱 향상되었습니다. 많은 테스트 바랍니다!</p>
 </body>
 </html>
